[tool.poetry]
name = "advancedpython"
version = "0.1.0"
description = ""
authors = ["tony2cssc <jijing.guo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
psutil = "^5.7.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
ipykernel = "^5.3.4"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
default = true  # 添加一个 default 参数, 使 poetry 的默认回调行为都调用到这个清华镜像上.

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
